--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "next": "9.5.3",
+    "rambda": "^6.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
@@ -21,6 +24,7 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "prettier": "^2.1.2",
     "stylelint-config-airbnb": "0.0.0",
-    "stylelint-config-prettier": "^8.0.2"
+    "stylelint-config-prettier": "^8.0.2",
+    "typescript": "^4.0.3"
   }
 }
